--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -45,8 +45,8 @@
             android:layout_height="0dp"
             android:layout_marginTop="24dp"
             android:orientation="vertical"
-            android:paddingStart="48dp"
-            android:paddingEnd="48dp"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +124,7 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="88dp"
-                android:backgroundTint="@color/colorAccent"
+                android:backgroundTint="@color/colorSecondary"
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="@font/al_jazeera_arabic"
