--- a/app/src/main/res/layout/fragment_activation.xml
+++ b/app/src/main/res/layout/fragment_activation.xml
@@ -20,14 +20,16 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/bc_splash"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -41,12 +43,12 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:orientation="vertical"
-            android:paddingStart="48dp"
-            android:paddingEnd="48dp"
+            android:paddingStart="24dp"
+            android:paddingEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3">
@@ -68,6 +70,7 @@
                 android:background="@drawable/edittext_background"
                 android:ems="10"
                 android:fontFamily="@font/al_jazeera_arabic"
+                android:gravity="center_vertical"
                 android:hint="@string/activation_code"
                 android:inputType="number"
                 android:paddingStart="14dp"
@@ -82,7 +85,7 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="88dp"
-                android:backgroundTint="@color/colorAccent"
+                android:backgroundTint="@color/colorSecondary"
                 android:clickable="true"
                 android:focusable="true"
                 android:fontFamily="@font/al_jazeera_arabic"
